--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css":"node-sass --include-path scss Asset/scss/style.scss Assets/css/style.css",
+    "build-css": "node-sass --include-path scss Assets/scss/style.scss assets/css/style.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
@@ -26,3 +26,4 @@
   },
   "homepage": "https://github.com/EmilianoZalazar/repositorio#readme"
 }
+ 
